--- a/css/styles.css
+++ b/css/styles.css
@@ -1201,7 +1201,7 @@ screen and (-ms-high-contrast: none) {
 }
 
 .form-1 .list-unstyled .fas {
-	color: #f7bacf;
+	color: #f32e73;
 	line-height: 1.375rem;
 }
 
